--- a/src/styles/Hero.module.css
+++ b/src/styles/Hero.module.css
@@ -56,6 +56,7 @@
 
 .img {
   width: 100%;
+  height: auto;
 }
 
 .container_btn {
@@ -78,6 +79,9 @@
   }
   .right_section {
     margin-left: 0;
+  }
+  .img {
+    margin-top: 4rem;
   }
 }
 
