--- a/src/styles/Hero.module.css
+++ b/src/styles/Hero.module.css
@@ -34,9 +34,11 @@
 
 .hero {
   max-width: 1280px;
+  min-height: 80vh;
   padding: 7rem 2rem;
   margin: 0 auto;
   display: flex;
+  align-items: center;
   justify-content: space-between;
 }
 
