--- a/src/styles/Hero.module.css
+++ b/src/styles/Hero.module.css
@@ -35,7 +35,7 @@
 .hero {
   max-width: 1280px;
   min-height: 80vh;
-  padding: 7rem 2rem;
+  padding: 8rem 2rem 12rem 2rem;
   margin: 0 auto;
   display: flex;
   align-items: center;
@@ -67,6 +67,9 @@
 }
 
 @media screen and (max-width: 1024px) {
+  .hero {
+    min-height: auto;
+  }
   .img {
     max-width: 300px;
   }
