--- a/src/styles/Hero.module.css
+++ b/src/styles/Hero.module.css
@@ -34,11 +34,9 @@
 
 .hero {
   max-width: 1280px;
-  min-height: 80vh;
-  padding: 8rem 2rem 12rem 2rem;
+  padding: 14vh 2rem;
   margin: 0 auto;
   display: flex;
-  align-items: center;
   justify-content: space-between;
 }
 
